[package]
name = "airvpn-fixer"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "~1", features = ["full"] }
axum = "~0.8"
reqwest = { version = "~0.12", features = ["json", "native-tls-vendored"] }
serde = { version = "~1", features = ["derive"] }
serde_json = "~1"
tracing = "~0.1"
tracing-subscriber = { version = "~0.3", features = ["json", "env-filter"] }
thiserror = "~2"
dotenvy = "~0.15"
zbus = "~5"
